# RT_EnCodec

./: .gitignore  README.md  devserver.py  max-port-plan.md  serialization.ipynb  test_serialization_traced.py
Serialization/: README.md  export_onnx.py  export_snac.py  export_snac_codebooks.py  serialization.ipynb  test_onnx_equivalence.py  test_serialization_traced.py  test_snac_equivalence.py
encodec/: model.py  utils.py
ncs/: .gitignore  CMakeLists.txt  README.md  clone_maxsdk.sh  max-port-plan.md
ncs/cmake/: CPM.cmake  Info.plist.in
ncs/help/: ncs.rt.snac24kh.decode~.maxhelp  ncs.rt.snac24kh.embedcodes.maxhelp  ncs.rt.snac24kh.embedcodes_decode~.maxhelp  ncs.rt.snac24kh.encode_vq~.maxhelp  ncs.rt.snac24kh.encode~.maxhelp  ncs.rt.snac24kh.full~.maxhelp  ncs.rt.snac24kh.vq.maxhelp
ncs/patchers/: ncs.snac24kh.rt_demo.maxpat
ncs/src/include/: buffer_helpers.h  chunk_helpers.h  onnx_helpers.h  resample_helpers.h  shared_external_helpers.h  tsqueue.h
ncs/src/ncs.rt.snac24kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac24kh.decode_tilde.cpp
ncs/src/ncs.rt.snac24kh.embedcodes/: CMakeLists.txt  ncs.rt.snac24kh.embedcodes.cpp
ncs/src/ncs.rt.snac24kh.embedcodes_decode_tilde/: CMakeLists.txt  ncs.rt.snac24kh.embedcodes_decode_tilde.cpp
ncs/src/ncs.rt.snac24kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac24kh.encode_tilde.cpp
ncs/src/ncs.rt.snac24kh.encode_vq_tilde/: CMakeLists.txt  ncs.rt.snac24kh.encode_vq_tilde.cpp
ncs/src/ncs.rt.snac24kh.full_tilde/: CMakeLists.txt  ncs.rt.snac24kh.full_tilde.cpp
ncs/src/ncs.rt.snac24kh.vq/: CMakeLists.txt  ncs.rt.snac24kh.vq.cpp
ncs/src/ncs.rt.snac32kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac32kh.decode_tilde.cpp
ncs/src/ncs.rt.snac32kh.embedcodes/: CMakeLists.txt  ncs.rt.snac32kh.embedcodes.cpp
ncs/src/ncs.rt.snac32kh.embedcodes_decode_tilde/: CMakeLists.txt  ncs.rt.snac32kh.embedcodes_decode_tilde.cpp
ncs/src/ncs.rt.snac32kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac32kh.encode_tilde.cpp
ncs/src/ncs.rt.snac32kh.encode_vq_tilde/: CMakeLists.txt  ncs.rt.snac32kh.encode_vq_tilde.cpp
ncs/src/ncs.rt.snac32kh.full_tilde/: CMakeLists.txt  ncs.rt.snac32kh.full_tilde.cpp
ncs/src/ncs.rt.snac32kh.vq/: CMakeLists.txt  ncs.rt.snac32kh.vq.cpp
ncs/src/ncs.rt.snac44kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac44kh.decode_tilde.cpp
ncs/src/ncs.rt.snac44kh.embedcodes/: CMakeLists.txt  ncs.rt.snac44kh.embedcodes.cpp
ncs/src/ncs.rt.snac44kh.embedcodes_decode_tilde/: CMakeLists.txt  ncs.rt.snac44kh.embedcodes_decode_tilde.cpp
ncs/src/ncs.rt.snac44kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac44kh.encode_tilde.cpp
ncs/src/ncs.rt.snac44kh.encode_vq_tilde/: CMakeLists.txt  ncs.rt.snac44kh.encode_vq_tilde.cpp
ncs/src/ncs.rt.snac44kh.full_tilde/: CMakeLists.txt  ncs.rt.snac44kh.full_tilde.cpp
ncs/src/ncs.rt.snac44kh.vq/: CMakeLists.txt  ncs.rt.snac44kh.vq.cpp
ncs/src/ncs.rt.snac_24kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac_24kh.decode_tilde.cpp
ncs/src/ncs.rt.snac_24kh.embedcodes/: CMakeLists.txt  ncs.rt.snac_24kh.embedcodes.cpp
ncs/src/ncs.rt.snac_24kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac_24kh.encode_tilde.cpp
ncs/src/ncs.rt.snac_24kh.vq/: CMakeLists.txt  ncs.rt.snac_24kh.vq.cpp
ncs/src/ncs.rt.snac_32kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac_32kh.decode_tilde.cpp
ncs/src/ncs.rt.snac_32kh.embedcodes/: CMakeLists.txt  ncs.rt.snac_32kh.embedcodes.cpp
ncs/src/ncs.rt.snac_32kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac_32kh.encode_tilde.cpp
ncs/src/ncs.rt.snac_32kh.vq/: CMakeLists.txt  ncs.rt.snac_32kh.vq.cpp
ncs/src/ncs.rt.snac_44kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac_44kh.decode_tilde.cpp
ncs/src/ncs.rt.snac_44kh.embedcodes/: CMakeLists.txt  ncs.rt.snac_44kh.embedcodes.cpp
ncs/src/ncs.rt.snac_44kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac_44kh.encode_tilde.cpp
ncs/src/ncs.rt.snac_44kh.vq/: CMakeLists.txt  ncs.rt.snac_44kh.vq.cpp
ncs/src/ncs.rt.snac_48kh.decode_tilde/: CMakeLists.txt  ncs.rt.snac_48kh.decode_tilde.cpp
ncs/src/ncs.rt.snac_48kh.embedcodes/: CMakeLists.txt  ncs.rt.snac_48kh.embedcodes.cpp
ncs/src/ncs.rt.snac_48kh.encode_tilde/: CMakeLists.txt  ncs.rt.snac_48kh.encode_tilde.cpp
ncs/src/ncs.rt.snac_48kh.vq/: CMakeLists.txt  ncs.rt.snac_48kh.vq.cpp
ncs/src/ncs.snac24kh.decode/: CMakeLists.txt  ncs.snac24kh.decode.cpp
ncs/src/ncs.snac24kh.embedcodes/: CMakeLists.txt  ncs.snac24kh.embedcodes.cpp
ncs/src/ncs.snac24kh.encode/: CMakeLists.txt  ncs.snac24kh.encode.cpp
ncs/src/ncs.snac24kh.vq/: CMakeLists.txt  ncs.snac24kh.vq.cpp
ncs/src/ncs.snac32kh.decode/: CMakeLists.txt  ncs.snac32kh.decode.cpp
ncs/src/ncs.snac32kh.embedcodes/: CMakeLists.txt  ncs.snac32kh.embedcodes.cpp
ncs/src/ncs.snac32kh.encode/: CMakeLists.txt  ncs.snac32kh.encode.cpp
ncs/src/ncs.snac32kh.vq/: CMakeLists.txt  ncs.snac32kh.vq.cpp
ncs/src/ncs.snac44kh.decode/: CMakeLists.txt  ncs.snac44kh.decode.cpp
ncs/src/ncs.snac44kh.embedcodes/: CMakeLists.txt  ncs.snac44kh.embedcodes.cpp
ncs/src/ncs.snac44kh.encode/: CMakeLists.txt  ncs.snac44kh.encode.cpp
ncs/src/ncs.snac44kh.vq/: CMakeLists.txt  ncs.snac44kh.vq.cpp
ncs/src/ncs.snac_24kh.decode/: CMakeLists.txt  ncs.snac_24kh.decode.cpp
ncs/src/ncs.snac_24kh.embedcodes/: CMakeLists.txt  ncs.snac_24kh.embedcodes.cpp
ncs/src/ncs.snac_24kh.encode/: CMakeLists.txt  ncs.snac_24kh.encode.cpp
ncs/src/ncs.snac_24kh.vq/: CMakeLists.txt  ncs.snac_24kh.vq.cpp
ncs/src/ncs.snac_32kh.decode/: CMakeLists.txt  ncs.snac_32kh.decode.cpp
ncs/src/ncs.snac_32kh.embedcodes/: CMakeLists.txt  ncs.snac_32kh.embedcodes.cpp
ncs/src/ncs.snac_32kh.encode/: CMakeLists.txt  ncs.snac_32kh.encode.cpp
ncs/src/ncs.snac_32kh.vq/: CMakeLists.txt  ncs.snac_32kh.vq.cpp
ncs/src/ncs.snac_44kh.decode/: CMakeLists.txt  ncs.snac_44kh.decode.cpp
ncs/src/ncs.snac_44kh.embedcodes/: CMakeLists.txt  ncs.snac_44kh.embedcodes.cpp
ncs/src/ncs.snac_44kh.encode/: CMakeLists.txt  ncs.snac_44kh.encode.cpp
ncs/src/ncs.snac_44kh.vq/: CMakeLists.txt  ncs.snac_44kh.vq.cpp
rt_encodec/: model.py
rt_snac/: layers.py  snac.py
snac/: UPSTREAM_COMMIT.txt
web/: README.md  (+15 more)
(+27 files in other folders)
